Fleshed out recipe, added photo of protein slop

--- a/recipes/protein-slop.html
+++ b/recipes/protein-slop.html
@@ -6,5 +6,19 @@
 </head>
 <body>
     <h1>Protein Slop</h1>
+    <img src="../images/protein-slop.jpeg">
+    <h2>Description</h2>
+    <p>Protein slop is a basic stew-type recipe. It consists of rice, lentils, and chicken, along with basic seasonings such as salt and a spice mixture of choice. It is an easy to prepare, easy to cook, one-pot dish high in protein.</p>
+    <p>If you want to use other legumes with the dish, they must either be prepared before hand (with appropriate soaking and boiling) or else taken from a can. Lentils have the advantage of not requiring a soak or pre-cook before use.</p>
+    <p>This dish can make use of any seasoning mixture, but African seasonings, such as Ethiopean Beriberi (RIP Ethiopia), or Ras El Hanout, work particularly well.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>0.25 - 1.0 cups rice (any variety)</li>
+        <li>0.25 - 0.5 cups lentil</li>
+        <li>1 chicken breast</li>
+        <li>Approx. 1 cup vegetable broth</li>
+        <li>1/2 tsp salt</li>
+        <li>1 tsp seasoning mixture of choice (African varieties work well)</li>
+    </ul>
 </body>
 </html>
