Finished protein slop.

--- a/recipes/protein-slop.html
+++ b/recipes/protein-slop.html
@@ -20,5 +20,16 @@
         <li>1/2 tsp salt</li>
         <li>1 tsp seasoning mixture of choice (African varieties work well)</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Add rice, lentil, salt, and spices to your pot.</li>
+        <li>Cut the chicken breast into thin slices and add the chicken to the pot.</li>
+        <li>Add about 1 cup of broth to the pot.</li>
+        <li>Put the lid on the pot and set the heat to high. </li>
+        <li>Once the mixture begins to boil, set heat to low.</li>
+        <li>Check on the pot occasionally, stirring the contents and adding water to the dish as needed, as the rice and legumes cook.</li>
+        <li>Once rice and lentil appear fully cooked, the dish is finished. Add or boil off water in order to achieve your desired thickness. It is recommended you test the doneness of the rice and lentil by sampling the contents. Before doing this, cut open one of the chicken pieces to ensure they have been fully cooked.</li>
+        <li>Eat directly out of the pot for maximum efficiency. Place the hot dish on an oven mit or folded kitchen towel to protect whatever surface you will be eating off of.</li>
+    </ol>
 </body>
 </html>
