--- a/recipes/protein-slop.html
+++ b/recipes/protein-slop.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Protein Slop</h1>
-    <img src="../images/protein-slop.jpeg">
+    <img src="../images/protein-slop.jpeg" alt="a bowl of chicken lentil and rice stew">
     <h2>Description</h2>
     <p>Protein slop is a basic stew-type recipe. It consists of rice, lentils, and chicken, along with basic seasonings such as salt and a spice mixture of choice. It is an easy to prepare, easy to cook, one-pot dish high in protein.</p>
     <p>If you want to use other legumes with the dish, they must either be prepared before hand (with appropriate soaking and boiling) or else taken from a can. Lentils have the advantage of not requiring a soak or pre-cook before use.</p>
