--- a/recipes/protein-slop.html
+++ b/recipes/protein-slop.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Protein Slop</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <h1>Protein Slop</h1>
